# proc-macro-workshop

./: main.rs
bitfield/impl/: Cargo.toml
bitfield/impl/src/: lib.rs
bitfield/src/: lib.rs
builder/: Cargo.toml
builder/src/: lib.rs  utils.rs
debug/: Cargo.toml
debug/src/: lib.rs
seq/: Cargo.toml
seq/src/: lib.rs
seq/tests/: 04-paste-ident.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
