[package]
name = "sorted"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
syn = { version = "1.0.60", features = ["full", "extra-traits", "visit-mut"] }
proc-macro2 = {version="1.0.0", features=["span-locations"]}
quote = {version="1.0"}

